[package]
name = "multi-party-ecdsa"
version = "0.1.0"
edition = "2018"

[lib]
crate-type= ["lib"]

[dependencies]
classgroup = {path = "../classgroup"}
hex = "0.4"
rand = "0.8"
k256 = { version = "0.11", features = ["arithmetic", "ecdsa", "serde"] }
lazy_static = "1.4.0"
sha2 = "0.10"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

